:bug: project sort 추가, 레포 중복 방지 코드 추가